--- a/MMI.bib
+++ b/MMI.bib
@@ -1,8 +1,60 @@
+@article{Sinclair2005,
+abstract = {As evidenced by the proliferation of phishing attacks and keystroke loggers, we know that human beings are not well-equipped to make trust decisions about when to use their passwords or other personal credentials. Public key cryptography can reduce this risk of attack, because authentication using PKI is designed to not give away sensitive data. However, using private keys on standard platforms exposes the user to "keyjacking"; mobile users wishing to use keypairs on an unfamiliar and potentially untrusted workstation face even more obstacles. In this paper we present the design and prototype of PorKI, a software application for mobile devices that offers an alternative solution to the portable key problem. Through the use of temporary keypairs, proxy certificates, and wireless protocols, PorKI enables a user to employ her PKI credentials on any Bluetooth-enabled workstation, including those not part of her organization's network, and even those that might be malicious. Moreover, by crafting XACML policy statements that limit the key usage to the workstation's trustworthiness level, and inserting these statements into extensions of the proxy certificates, PorKI provides the user or the relying party with the ability to limit the amount of trust that can be put in the temporary keypair used on that workstation, and thus the scope of a potential compromise},
+author = {Sinclair, Sara and Smith, Sean W.},
+doi = {10.1109/CSAC.2005.43},
+file = {:Users/mark/Documents/CS 658/Survey/Managing multiple identities/PKI/ss05b.pdf:pdf},
+isbn = {0769524613},
+issn = {10639527},
+journal = {Proceedings - Annual Computer Security Applications Conference, ACSAC},
+pages = {419--428},
+title = {{PorKI: Making user PKI safe on machines of heterogeneous trustworthiness}},
+volume = {2005},
+year = {2005}
+}
+@article{Lyle2013,
+abstract = {As people use an increasing number of smart devices for their everyday computing, it is surprising that these powerful, internet-enabled devices are rarely connected together to create personal networks. The webinos project is an attempt to make this possible so that resources can easily be shared between devices, regardless of the operating system or network they are using. However, increased connectivity raises a number of security and privacy issues, and in this paper we introduce a public key infrastructure designed to be suitable for personal computing across multiple devices. We recognize the need for our PKI to work on both mobile and home networks, use existing online user identities and take into consideration the different interaction styles found on smart devices in different form factors. We propose a set of principles for personal key infrastructures, describe our implementation and outline how it mitigates common threats and issues.},
+author = {Lyle, John and Paverd, Andrew and King-Lacroix, Justin and Atzeni, Andrea and Virji, Habib and Flechais, Ivan and Faily, Shamal},
+doi = {10.1007/978-3-642-40012-4_5},
+file = {:Users/mark/Documents/CS 658/Survey/Managing multiple identities/PKI/personal-pki.pdf:pdf},
+isbn = {9783642400117},
+issn = {03029743},
+journal = {Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},
+pages = {69--84},
+title = {{Personal PKI for the smart device era}},
+volume = {7868 LNCS},
+year = {2013}
+}
+@article{Desmedt1994,
+author = {Desmedt, Yvo G.},
+doi = {10.1002/ett.4460050407},
+file = {:Users/mark/Documents/CS 658/Survey/Managing multiple identities/Threshold Cryptography/Basic/Desmedt-1994-European{\_}Transactions{\_}on{\_}Telecommunications.pdf:pdf},
+isbn = {0387234837},
+issn = {15418251},
+journal = {European Transactions on Telecommunications},
+number = {4},
+pages = {449--458},
+title = {{Threshold cryptography}},
+volume = {5},
+year = {1994}
+}
+@article{Melara2015,
+author = {Melara, Marcela S and Blankstein, Aaron and Bonneau, Joseph and Freedman, Michael J and Melara, Marcela S and Blankstein, Aaron and Bonneau, Joseph and Felten, Edward W and Freedman, Michael J},
+file = {:Users/mark/Documents/CS 658/Survey/Managing multiple identities/PKI/sec15-paper-melara.pdf:pdf},
+isbn = {9781931971232},
+journal = {24th USENIX Security Symposium (USENIX Security 15)},
+title = {{CONIKS : Bringing Key Transparency to End Users This paper is included in the Proceedings of the CONIKS : Bringing Key Transparency to End Users}},
+year = {2015}
+}
+@article{Kokoris-kogias,
+author = {Kokoris-kogias, Eleftherios and Gasser, Linus and Khoffi, Ismail and Jovanovic, Philipp and Gailly, Nicolas and Ford, Bryan},
+file = {:Users/mark/Library/Application Support/Mendeley Desktop/Downloaded/Kokoris-kogias et al. - Unknown - Managing Identities Using Blockchains and CoSi.pdf:pdf},
+title = {{Managing Identities Using Blockchains and CoSi}}
+}
 @article{Atwater2016,
 abstract = {The average computer user is no longer restricted to one device. They may have several devices and expect their applications to work on all of them. A challenge arises when these applications need the cryptographic private key of the devices' owner. ...},
 author = {Atwater, Erinn and Hengartner, Urs},
 doi = {10.1145/2939918.2939932},
-file = {:Users/mark/Documents/CS 658/Survey/Managing multiple identities/p91-atwater.pdf:pdf},
+file = {:Users/mark/Library/Application Support/Mendeley Desktop/Downloaded/Atwater, Hengartner - 2016 - Shatter Using Threshold Cryptography to Protect Single Users with Multiple Devices.pdf:pdf},
 isbn = {9781450342704},
 journal = {WiSec '16: Proceedings of the 9th ACM Conference on Security {\&} Privacy in Wireless and Mobile Networks},
 keywords = {Authentication,proximity},
@@ -11,9 +63,38 @@ title = {{Shatter: Using Threshold Cryptography to Protect Single Users with Mul
 url = {http://dl.acm.org/citation.cfm?id=2939932{\%}5Cnpapers3://publication/doi/10.1145/2939918.2939932},
 year = {2016}
 }
-
-@article{Kokoris-kogias,
-author = {Kokoris-kogias, Eleftherios and Gasser, Linus and Khoffi, Ismail and Jovanovic, Philipp and Gailly, Nicolas and Ford, Bryan},
-file = {:Users/mark/Documents/CS 658/Survey/Managing multiple identities/1{\_}Managing{\_}identities{\_}bryan{\_}ford{\_}etc.pdf:pdf},
-title = {{Managing Identities Using Blockchains and CoSi}}
+@article{Bellare2003,
+abstract = {This paper provides theoretical foundations for the group signature$\backslash$nprimitive. We introduce strong, formal deﬁnitions for the core requirements$\backslash$nof anonymity and traceability. We then show that these imply the$\backslash$nlarge set of sometimes ambiguous existing informal requirements in$\backslash$nthe literature, thereby unifying and simplifying the requirements$\backslash$nfor this primitive. Finally we prove the existence of a construct$\backslash$nmeeting our deﬁnitions based only on the assumption that trapdoor$\backslash$npermutations exist.},
+author = {Bellare, Mihir and Micciancio, Daniele and Warinschi, Bogdan},
+doi = {10.1007/3-540-39200-9_38},
+file = {:Users/mark/Documents/CS 658/Survey/Managing multiple identities/Threshold Cryptography/26560615.pdf:pdf},
+isbn = {978-3-540-14039-9},
+issn = {03029743},
+pages = {614--629},
+title = {{Foundations of Group Signatures: Formal Definitions, Simplified Requirements, and a Construction Based on General Assumptions}},
+url = {http://link.springer.com/10.1007/3-540-39200-9{\_}38},
+year = {2003}
+}
+@article{Stajano2011,
+abstract = {From a usability viewpoint, passwords and PINs have reached the end of their useful life. Even though they are convenient for imple- menters, for users they are increasingly unmanageable. The demands placed on users (passwords that are unguessable, all different and never written down) are no longer reasonable now that each person has to manage dozens of passwords. Yet we cant abandon them until we come up with an alternative method of user authentication that is both usable and secure. We present an alternative design based on a hardware token called Pico that relieves the user from having to remember passwords and PINs.We discuss how Pico would work, not merely in the relatively straightforward case of remote login to a web site but also in all the other contexts in which users must at present remember passwords and PINs. After discussing an ideal clean-slate design we consider possible variations that might trade off some security in exchange for backwards compatibility, convenience and better prospects for widespread adoption.},
+author = {Stajano, Frank},
+doi = {10.1007/978-3-642-25867-1_6},
+file = {:Users/mark/Documents/CS 658/Survey/OLD/Proximity based/2011-Stajano-passwords-PRELIMINARY.pdf:pdf},
+isbn = {9783642258664},
+issn = {03029743},
+journal = {Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},
+pages = {49--81},
+title = {{Pico: No more passwords!}},
+volume = {7114 LNCS},
+year = {2011}
+}
+@article{Desmedt2001,
+author = {Desmedt, Yvo and Burmester, Mike and Safavi-Naini, Rei and Wang, Huaxiong},
+file = {:Users/mark/Documents/CS 658/Survey/Managing multiple identities/Threshold Cryptography/peeters/t4.pdf:pdf},
+journal = {Symposium on Requirements Engineering for Information
+Security, West Lafayette, Indiana, USA},
+title = {{Threshold Things That
+Think (T4): Security Requirements to Cope with Theft of Handheld/Handless
+Internet Devices}},
+year = {2001}
 }
