--- a/MMI.bib
+++ b/MMI.bib
@@ -98,3 +98,11 @@ Think (T4): Security Requirements to Cope with Theft of Handheld/Handless
 Internet Devices}},
 year = {2001}
 }
+@misc{Webfinger,
+  author = {Jones, P.E. and Salgueiro, G. and Smarr, J.},
+  title = {WebFinger: IETF Network Working Group Internet Draft.},
+  year = 2012,
+  month= May,
+  howpublished = {http://tools.ietf.org/html/draft-jones-appsawg- webfinger-04},
+  
+}
