--- a/Managing multiple Identities.tex
+++ b/Managing multiple Identities.tex
@@ -1,6 +1,10 @@
 \documentclass[sigconf]{acmart}
 
 \usepackage{booktabs} % For formal tables
+\usepackage{enumitem}
+\usepackage{graphicx}
+\graphicspath{{images/}}
+%\usepackage{cite}
 
 \def\comment#1{{\color{blue}\textbf{Comment:~} #1}}
 
@@ -14,6 +18,9 @@
 %\setcopyright{usgovmixed}
 %\setcopyright{cagov}
 %\setcopyright{cagovmixed}
+
+%Conference
+\acmConference[CS 658]{University of Waterloo}{July 2017}{University of Waterloo} 
 
 \begin{document}
 \title{How to Not Lose Your Keys}
